--- a/index.css
+++ b/index.css
@@ -1,18 +1,38 @@
-.main-div{
-    background-color: pink;
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    height: 300px;
-    flex-direction: row;
-
-
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
-.div{
-    color:wheat;
-    background-color: rgb(152, 173, 180);
-    border: 2px solid blue;
-    height: 50px;
-    width: 150%;
+body {
+	margin: 10px;
+}
+img {
+	width: 100%;
+	height: 100%;
+}
+.row {
+	height: 400px;
+	margin-bottom: 5px;
+	display: flex;
+	gap: 5px;
+}
+.row > div {
+	flex: 1;
+}
+.row-div img {
+	height: calc(( 100% - 5px )/2);
+}
+.quad-div {
+	display: flex;
+}
+@media screen and (max-width: 576px) {
+    .row {
+      flex-direction: column;
+    }
     
-}
+    .row > div img,
+    .row-div img {
+      width: 100%;
+      height: auto;
+    }
+  }
