--- a/index.css
+++ b/index.css
@@ -149,7 +149,7 @@ background-color:  #fa76ba;
 }
 .play-content{
 
-    background-image: url(/images/Group\ 14.png);
+    background-image: url('images/Group 14.png');
     background-repeat: no-repeat;
     padding: 148px 309px 148px 244px;
     text-align: left;
