--- a/index.css
+++ b/index.css
@@ -255,7 +255,7 @@ line-height: normal;}
 }
 .img-section-head{
 display: flex;
-justify-content: space-evenly;
+gap: 20px;
 align-items:center;
 text-align: justify;
 
