--- a/index.css
+++ b/index.css
@@ -323,6 +323,7 @@ text-align: justify;
 }
 .main-div-button{
     display: flex;
+    margin-bottom: 50px;
     justify-content: center;
     align-items: center;
     font-weight: 600;
@@ -393,4 +394,29 @@ text-align: justify;
     color: rgba(255, 255, 255, 0.60);
     font-size: 1rem;
     font-weight: 500;
+}
+@media screen and (max-width:925px) {
+    .nav-state , .play, .we-are-gamer{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+
+    }
+    .play{
+        flex-direction: column-reverse;
+        
+    }
+.gamers-logo, .nav li, .icon , .policy-tag , .copyright
+{
+    display: flex;
+    font-size: 20px;
+    gap:5px;
+    flex-wrap: wrap-reverse;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    
+    background: transparent;
+}
 }
