--- a/index.css
+++ b/index.css
@@ -258,6 +258,7 @@ display: flex;
 gap: 20px;
 align-items:center;
 text-align: justify;
+justify-content: center;
 
 }
 .img-section{
@@ -266,9 +267,24 @@ text-align: justify;
 .img-section3{
     width: 342px;
     height: auto;
+    position: relative;
+    top: 200px;
     
 }
-
+.section3{
+        position: relative;
+        bottom: 460px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 340px;
+        height: 400px;
+        background: rgba(0, 0, 0, 0.5);
+        border: rgba(0, 0, 0, 0.5);
+        border-radius: 15px;
+        color: #F948B2; 
+}
 .inside-play-instantly p{
     text-align: right;
 }
@@ -395,7 +411,7 @@ text-align: justify;
     font-size: 1rem;
     font-weight: 500;
 }
-@media screen and (max-width:925px) {
+@media screen and (max-width:425px) {
     .nav-state , .play, .we-are-gamer{
         flex-direction: column;
         align-items: center;
