--- a/index.css
+++ b/index.css
@@ -136,48 +136,13 @@ gap: 10px;
 border-radius: 40px;
 background-color:  #fa76ba;
 }
-@media screen and (max-width:450px) {
+@media screen and (max-width:425px) {
     .play-main-div{
-        width: 350px;
+        width: auto;
         display: flex;
         flex-direction: column-reverse;
         height: auto;
         align-items: center;
-}
-.img-1-1> img{
-    height: auto;
-    width: 430px;
-}
-.play-content{
-    padding: auto;
-    text-align: center;
-    align-items: center;
-    background-image: url('images/Group 14.png');
-    background-repeat:no-repeat;
-}
-
-.play-like-the{
-font-size: 48px;
-font-weight: 700;
-
-}
-
-.goat{
-font-size: 95px;
-font-weight: 800;
-background: linear-gradient( #ff0634 30%, #4e07f5);
-background-clip: text;
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-}
-
-.goat-1click{
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 5px;
-}
-.img-goat{
-    width: auto;
 }
 
 }
@@ -221,7 +186,7 @@ line-height: 45px;
     font-weight: 400;
     line-height: 45px;
 }
-@media screen and (max-width:445px) {
+@media screen and (max-width:425px) {
     .we-are-gamer{
         display: flex;
         flex-direction: column;
@@ -288,6 +253,17 @@ justify-content: center;
         border-radius: 15px;
         color: #70144b; 
 }
+@media screen and (max-width:425px) {
+    .img-section-head{
+        display: flex;
+        flex-direction: column;
+        align-items:center;
+        gap: 20px;
+        text-align: justify;
+        justify-content: center;
+        
+        }
+}
 .inside-play-instantly p{
     text-align: right;
 }
@@ -324,8 +300,16 @@ justify-content: center;
     top: 00px;
     
 }
+@media screen and (max-width:425px) {
+    .main-div-playinstantly{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
 
-/* copy play instantly */
+/*  play instantly */
 
 
 .main-div-button{
